WebKitWebView signals with GError parameters cause crashes when using GObject Introspection https://bugs.webkit.org/show_bug.cgi?id=81977

Patch by Gary Kramlich <grim@reaperworld.com> on 2012-03-26
Reviewed by Martin Robinson.

Added marshalers for BOOLEAN:OBJECT,STRING,BOXED and VOID:OBJECT,OBJECT,BOXED
and changed the signal signatures for WebKitWebView::load-fail and
WebKitWebView::resource-load-failed to use the new marshalers since
GError has been a GBoxed type since Gtk 2.26.  This fixes these signals
for the gobject-introspection bindings.

* webkit/webkitwebview.cpp:
(webkit_web_view_class_init):
* webkitmarshal.list:

Canonical link: https://commits.webkit.org/99553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112111 268f45cc-cd09-0410-ab3c-d52691b4dbfc